@startuml
'https://plantuml.com/class-diagram
class Estudiante {

}
class GestorPublicacion{}
class GestorIntercambio{}
class EstudianteDAO{}

Estudiante -- "1" GestorPublicacion
Estudiante -- "1" GestorIntercambio
GestorEstudiante -- EstudianteDAO
GestorEstudiante -- Estudiante : gestiona
GestorIntercambio -- IntercambioDAO
GestorIntercambio -- PublicacionDAO
GestorIntercambio -- "*" Intercambio
GestorPublicacion -- PublicacionDAO
GestorPublicacion -- Publicacion : gestiona
Intercambio -- "0..2"Estudiante
Intercambio -- "0..2"Publicacion
Publicacion -- "1" Estudiante : propietario
EstudianteDAO --|> DAO
IntercambioDAO --|> DAO
PublicacionDAO --|> DAO
PublicacionDAO -- "1" EstudianteDAO
IntercambioDAO -- PublicacionDAO
GUIPrincipal -- GestorPublicacion
GUIPrincipal -- GestorIntercambio
GUIPrincipal -- GestorEstudiante
ControlInicio -- GUIPrincipal : controlador
ControlInicio -- GestorEstudiante
ControlInteraccion -- "1"Estudiante
ControlInteraccion -- "1"GestorPublicacion
ControlInteraccion -- "1"GUIPrincipal
ControlOfertas -- GestorIntercambio
ControlOfertas -- Intercambio
ControlOfertas -- "1"GUIPrincipal : controlador
ControlOfertas -- GestorPublicacion
ControlVerPublicacion -- GUIPrincipal : controlador
ControlVerPublicacion -- Publicacion
ControlVerPublicacion -- Estudiante : estudianteActual
ControlVerPublicacion -- GestorPublicacion
ControlRealizaPublicacion -- GUIPrincipal : controlador
ControlRealizaPublicacion -- Estudiante
ControlRegistro -- GUIPrincipal : controlador
}

@enduml